--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ main {
 }
 
 footer {
-  z-index: 1000;
+  z-index: 1001;
   box-sizing: border-box;
   padding: 10px;
   width: 100%;
@@ -34,7 +34,21 @@ footer {
   background-color: black;
 }
 
-#page-title {
+.action-button {
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 3px;
+  border: none;
+  padding: 5px 10px;
+  margin: 0 5px;
+  background-color: white;
+}
+.action-button:hover {
+  cursor: pointer;
+  background-color: #00e1e1;
+}
+
+.page-title {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: normal;
@@ -63,61 +77,3 @@ footer {
 .place-description {
   font-size: 16px;
 } */
-
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0,0,0,0.5);
-}
-
-.modal-main {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1001;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  outline: 0;
-}
-
-.modal {
-  display: flex;
-  flex-direction: column;
-  z-index: 100;
-  background: white;
-  position: relative;
-  margin: 1.75rem auto;
-  border-radius: 3px;
-  max-width: 500px;
-  padding: 2rem;
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.modal-close-button {
-  font-size: 1.4rem;
-  font-weight: 700;
-  line-height: 1;
-  color: rgba(0,0,0,0.5);
-  cursor: pointer;
-  border: none;
-  background-color: inherit;
-}
-
-button {
-  font-size: .9rem;
-  font-weight: 700;
-  border: none;
-  border-radius: 3px;
-  padding: .3rem 1rem;
-  margin-left: .5rem;
-}
