--- a/src/component/Modal/Modal.module.css
+++ b/src/component/Modal/Modal.module.css
@@ -5,7 +5,7 @@
   z-index: 1000;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modalBackdrop.fadeIn {
@@ -28,6 +28,9 @@
   height: calc(100% - 75px);
   outline: 0;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .modal {
@@ -36,19 +39,19 @@
   z-index: 100;
   background: white;
   position: relative;
-  margin: 10px auto;
-  border-radius: 3px;
+  margin: 3px auto;
+  border-radius: 10px;
   max-width: 400px;
   min-height: 300px;
   height: 500px;
   max-height: 500px;
   overflow: scroll;
   overflow-wrap: break-word;
-  box-shadow: 5px 5px;
+  box-shadow: 0px 1px 10px black, 0px -1px 10px black;
 }
 
 .modal.open {
-  bottom: 0;
+  bottom: 0px;
   transition: all 0.5s cubic-bezier(0.4, 0, 0, 1);
 }
 
@@ -62,7 +65,7 @@
   justify-content: space-between;
 }
 
-.modalHeader >h1 {
+.modalHeader>h1 {
   margin: 20px 20px 0 20px;
 }
 
@@ -73,7 +76,7 @@
   width: 30px;
   display: flex;
   justify-content: center;
-  color: rgba(0,0,0,0.6);
+  color: rgba(0, 0, 0, 0.6);
   border: none;
   background-color: inherit;
   margin: 5px 15px;
