--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 html {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
-  color: #000;
 }
 
 #root {
@@ -17,44 +16,7 @@ html {
   flex-direction: column;
 }
 
-main {
-  height: calc(100% - 75px);
-}
-
-footer {
-  z-index: 1001;
-  box-sizing: border-box;
-  padding: 10px;
-  width: 100%;
-  height: 75px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: white;
-  background-color: black;
-}
-
-.action-button {
-  font-size: 14px;
-  font-weight: bold;
-  border-radius: 3px;
-  border: none;
-  padding: 5px 10px;
-  margin: 0 5px;
-  background-color: white;
-}
-.action-button:hover {
-  cursor: pointer;
-  background-color: #00e1e1;
-}
-
-.page-title {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: normal;
-  font-size: 42px;
-}
-
+/* Global Styles for LEAFLET components */
 .leaflet-container {
   width: 100%;
   height: 100%;
